[html-report] Fix input range CSS issues on IE. Final implementation for #563

--- a/com.archimatetool.reports/templates/html/css/model.css
+++ b/com.archimatetool.reports/templates/html/css/model.css
@@ -117,8 +117,48 @@ xmp {
 #zoomSlider {
 	width: 150px;
     position: absolute;
-    top: 50%;
+    top: 50% !important;
     right: 0;
-    transform: translate(0, -50%);
+    transform: translateY(-50%);
 }
 
+#zoomRange {
+	padding: 0;
+}
+
+/* Internet Explorer input range theming thanks to https://brennaobrien.com/blog/2014/05/style-input-type-range-in-every-browser.html */
+input[type=range]::-ms-track {
+    width: 300px;
+    height: 5px;
+    
+    /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
+    background: transparent;
+    
+    /*leave room for the larger thumb to overflow with a transparent border */
+    border-color: transparent;
+    border-width: 6px 0;
+
+    /*remove default tick marks*/
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #777;
+    border-radius: 10px;
+}
+input[type=range]::-ms-fill-upper {
+    background: #ddd;
+    border-radius: 10px;
+}
+input[type=range]::-ms-thumb {
+    border: none;
+    height: 16px;
+    width: 16px;
+    border-radius: 50%;
+    background: #767676;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #888;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #ccc;
+}
